--- a/style.css
+++ b/style.css
@@ -187,6 +187,10 @@ h1 {
 }
 
 @media screen and (width < 900px) {
+    .modal-container {
+        width: 100%;
+    }
+
     .meal-item {
         flex-basis: calc(50% - 20%);
         max-width: calc(50% - 20px);
@@ -198,7 +202,7 @@ h1 {
     }
 
     .search button {
-        width: 20%;
+        width: 50%;
     }
 }
 
@@ -206,5 +210,8 @@ h1 {
     .meal-item {
         flex-basis: calc(100% - 20px);
         max-width: calc(100% - 20px);
+    }
+    .modal-container {
+        width: 100%;
     }
 }
